# swan-stm32l4r5-quickstart

./: Cargo.toml  LICENSE-MIT  README.md  debug.gdb  memory.x
.cargo/: config
src/: main.rs
