[package]
name = "swan-quickstart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
panic-probe = "0.3.0"
stm32l4xx-hal = { version = "0.6.0", features = ["stm32l4r5", "rt"] }
stm32l4 = { version = "0.14", features = [ "stm32l4r5", "rt" ] }

[patch.crates-io]
stm32l4 = { path = "../stm32-rs/stm32l4" }
stm32l4xx-hal = { path = "../stm32l4xx-hal" }
