[package]
name = "swan-quickstart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
panic-probe = { version = "0.3.0", features = [ "print-rtt" ] }
stm32l4xx-hal = { version = "0.7", features = ["stm32l4r5", "rt", "otg_fs"] }
stm32l4 = { version = "0.15", features = [ "stm32l4r5", "rt" ] }
rtt-target = { version = "0.3.1", features = [ "cortex-m" ] }

usbd-serial = "0.1.1"
usb-device = "0.2.8"

[patch.crates-io]
stm32l4xx-hal = { path = "../stm32l4xx-hal" }
